--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "categories": [
         "Programming Languages"
     ],
+    "activationEvents": [
+        "onCommand:wechat.newPage"
+    ],
+    "main": "./out/extension.js",
     "contributes": {
         "languages": [{
                 "id": "wxml",
-                "aliases": ["wxml", "wxml"],
-                "extensions": [".wxml"],
+                "aliases": [
+                    "wxml",
+                    "wxml"
+                ],
+                "extensions": [
+                    ".wxml"
+                ],
                 "configuration": "./languages/language-wxml-configuration.json"
             },
             {
@@ -40,12 +49,10 @@
             "scopeName": "text.html.wxml",
             "path": "./syntaxes/wxml.tmLanguage.json"
         }],
-        "snippets": [
-            {
+        "snippets": [{
                 "path": "./snippets/.code-snippets"
             },
             {
-            
                 "language": "javascript",
                 "path": "./snippets/wxjs.json"
             },
@@ -69,6 +76,36 @@
                 "language": "json",
                 "path": "./snippets/wxjson.json"
             }
-        ]
+        ],
+        "menus": {
+            "explorer/context": [
+                {
+                    "command": "wechat.newPage",
+                    "group": "git"
+                }
+            ]
+        },
+        "commands": [{
+            "command": "wechat.newPage",
+            "title": "新建小程序页面"
+        }]
+    },
+    "scripts": {
+        "vscode:prepublish": "npm run compile",
+        "compile": "tsc -p ./",
+        "watch": "tsc -watch -p ./",
+        "pretest": "npm run compile",
+        "test": "node ./out/test/runTest.js"
+    },
+    "devDependencies": {
+        "@types/glob": "^7.1.1",
+        "@types/mocha": "^5.2.6",
+        "@types/node": "^10.12.21",
+        "@types/vscode": "^1.39.0",
+        "glob": "^7.1.4",
+        "mocha": "^6.1.4",
+        "typescript": "^3.3.1",
+        "tslint": "^5.12.1",
+        "vscode-test": "^1.2.0"
     }
 }
