--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "displayName": "微信小程序扩展",
     "description": "微信小程序扩展,wechat,miniprogram",
     "version": "0.1.0",
+    "icon": "./resources/images/wechat.png",
     "publisher": "zsh",
     "repository": {
         "type": "git",
