--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,20 @@
-language: node
+language: node_js
+node_js:
+  - "12.12.0"
+
 os:
+  - osx
   - linux
-addons:
-  apt:
-    packages:
-      - libsecret-1-dev
+
 before_install:
   - if [ $TRAVIS_OS_NAME == "linux" ]; then
       export CXX="g++-4.9" CC="gcc-4.9" DISPLAY=:99.0;
       sh -e /etc/init.d/xvfb start;
       sleep 3;
     fi
-  - git clone https://github.com/creationix/nvm.git ./.nvm
-  - source ./.nvm/nvm.sh
-  - nvm install 12.13.0
-  - nvm use 12.13.0
 
+install:
+  - npm install
 
+script:
+  - npm test --silent
