--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
             "explorer/context": [
                 {
                     "command": "wechat.newPage",
-                    "group": "git"
+                    "group": "wechat"
                 }
             ]
         },
@@ -113,11 +113,13 @@
         "@types/glob": "^7.1.1",
         "@types/mocha": "^5.2.6",
         "@types/node": "^10.12.21",
+        "@types/prettier": "1.18.3",
         "@types/vscode": "^1.39.0",
         "glob": "^7.1.4",
         "mocha": "^6.1.4",
-        "typescript": "^3.3.1",
+        "prettier": "1.18.2",
         "tslint": "^5.12.1",
+        "typescript": "^3.3.1",
         "vscode-test": "^1.2.0"
     }
 }
