--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "miniprogram",
     "displayName": "微信小程序扩展",
     "description": "微信小程序扩展,wechat,miniprogram",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "icon": "resources/images/wechat.png",
     "publisher": "zsh",
     "repository": {
@@ -121,5 +121,8 @@
         "tslint": "^5.12.1",
         "typescript": "^3.3.1",
         "vscode-test": "^1.2.0"
+    },
+    "dependencies":{
+        "prettier": "1.18.2"
     }
 }
